Introduce mdBook-pagetoc

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -187,6 +187,10 @@
 
                 <div id="content" class="content">
                     <main>
+                        <div class="sidetoc">
+                          <nav class="pagetoc"></nav>
+                        </div>
+
                         {{{ content }}}
                     </main>
 
