--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -134,7 +134,7 @@
                         {{/if}}
                     </div>
 
-                    <h1 class="menu-title">{{ book_title }}</h1>
+                    <div class="menu-title">{{ book_title }}</div>
 
                     <div class="right-buttons">
                         {{#if print_enable}}
