--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -1,8 +1,8 @@
+<meta name="google-site-verification" content="I2IiJw92-ns-i89-BauWRWbONmTxkGU0LuMpMEI3E2I" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRHGDF4JZV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-GRHGDF4JZV');
 </script>
