I changed the font loading destination to try it out.
If it is too slow, I will think about it again.

--- a/theme/head.hbs
+++ b/theme/head.hbs
@@ -6,3 +6,4 @@
   gtag('js', new Date());
   gtag('config', 'G-GRHGDF4JZV');
 </script>
+<script src="https://kit.fontawesome.com/e7145c1091.js" crossorigin="anonymous"></script>
