Use carefully selected local fonts on a trial basis.

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -111,10 +111,10 @@
                 <div id="menu-bar" class="menu-bar sticky bordered">
                     <div class="left-buttons">
                         <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
-                            <i class="fa-solid fa-bars-staggered"></i>
+                            <i class="fa-bars-staggered"></i>
                         </button>
                         <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
-                            <i class="fa-solid fa-palette"></i>
+                            <i class="fa-palette"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
