--- a/scss/fonts/fonts.scss
+++ b/scss/fonts/fonts.scss
@@ -127,37 +127,46 @@
   font-family: "icomoon";
   font-style: normal;
   font-weight: 500;
-  src: url("icomoon.woff") format("woff");
+  src: url("icomoon.woff2") format("woff2");
   font-display: swap;
 }
 
-[class^="fa-"],
-[class*=" fa-"] {
+[class^="fa-"], [class*=" fa-"] {
   font-family: "icomoon" !important;
   font-style: normal;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.fa-copy:before {
+.fa-angle-left:before {
   content: "\e900";
 }
-.fa-github:before {
+.fa-angle-right:before {
   content: "\e901";
 }
-.fa-print:before {
+.fa-copy:before {
   content: "\e902";
 }
-.fa-magnifying-glass:before {
+.fa-github:before {
   content: "\e903";
 }
-.fa-palette:before {
+.fa-globe:before {
   content: "\e904";
 }
-.fa-bars-staggered:before {
+.fa-list-ul:before {
   content: "\e905";
 }
-.fa-angle-right:before {
+.fa-magnifying-glass:before {
   content: "\e906";
 }
-.fa-angle-left:before {
+.fa-palette:before {
   content: "\e907";
+}
+.fa-pen-to-square:before {
+  content: "\e908";
+}
+.fa-print:before {
+  content: "\e909";
 }
