Eliminate render-blocking resources
refs: https://developer.chrome.com/docs/lighthouse/performance/render-blocking-resources/?utm_source=lighthouse&utm_medium=lr

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -38,11 +38,11 @@
         {{/if}}
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="{{ path_to_root }}highlight.css">
+        <link rel="stylesheet" href="{{ path_to_root }}highlight.css" async>
 
         <!-- Custom theme stylesheets -->
         {{#each additional_css}}
-        <link rel="stylesheet" href="{{ ../path_to_root }}{{ this }}">
+        <link rel="stylesheet" href="{{ ../path_to_root }}{{ this }}" async>
         {{/each}}
 
         {{#if mathjax_support}}
