--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -1,10 +1,12 @@
-@media only screen and (max-width: 850px) {
+@import "global.scss";
+
+@media only screen and (max-width: $mobile-max-width) {
   .sidetoc {
     display: none;
   }
 }
 
-@media only screen and (min-width: 850px) {
+@media only screen and (min-width: $mobile-max-width) {
   main {
     position: relative;
   }
