--- a/scss/theme/variables.scss
+++ b/scss/theme/variables.scss
@@ -1,4 +1,4 @@
-/* Globals */
+// Globals
 
 :root {
   --sidebar-width: 200px;
@@ -7,7 +7,7 @@
   --menu-bar-height: 50px;
   --mono-font: "HackGen35 Console NF", "Source Code Pro", Consolas, "Ubuntu Mono", Menlo,
     "DejaVu Sans Mono", monospace;
-  --code-font-size: 0.75em; /* please adjust the ace font size accordingly in editor.js */
+  --code-font-size: 0.75em; // please adjust the ace font size accordingly in editor.js
 }
 
 @media (prefers-color-scheme: dark) {
