--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -1,12 +1,12 @@
-@import "global.scss";
+@use "global.scss" as gbl;
 
-@media only screen and (max-width: $mobile-max-width) {
+@media only screen and (max-width: gbl.$mobile-max-width) {
   .sidetoc {
     display: none;
   }
 }
 
-@media only screen and (min-width: $mobile-max-width) {
+@media only screen and (min-width: gbl.$mobile-max-width) {
   main {
     position: relative;
   }
