--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -1,3 +1,5 @@
+@use 'variables' as var;
+
 // Base styles and content styles
 
 :root {
@@ -19,8 +21,8 @@ body {
 }
 
 code {
-  font-family: var(--mono-font) !important;
-  font-size: var(--code-font-size);
+  font-family: var.$mono-font !important;
+  font-size: var.$code-font-size;
 }
 
 // make long words/inline code not x overflow
@@ -75,7 +77,7 @@ h5 {
 
 .page {
   outline: 0;
-  margin-top: calc(0px - var(--menu-bar-height)); // Compensate for the #menu-bar-hover-placeholder
+  margin-top: calc(0px - var.$menu-bar-height); // Compensate for the #menu-bar-hover-placeholder
 }
 .page-wrapper {
   box-sizing: border-box;
@@ -169,8 +171,8 @@ kbd {
   border: solid 1px var(--theme-popup-border);
   box-shadow: inset 0 -1px 0 var(--theme-hover);
   display: inline-block;
-  font-size: var(--code-font-size);
-  font-family: var(--mono-font);
+  font-size: var.$code-font-size;
+  font-family: var.$mono-font;
   line-height: 10px;
   padding: 4px 5px;
   vertical-align: middle;
