--- a/scss/theme/variables.scss
+++ b/scss/theme/variables.scss
@@ -1,11 +1,12 @@
 // Globals
 
+$page-padding: 15px;
+$sidebar-width: 200px;
+$menu-bar-height: 50px;
+$content-max-width: 770px;
+$mono-font: "HackGen35 Console NF", "Source Code Pro", Consolas, "Ubuntu Mono", Menlo, "DejaVu Sans Mono", monospace;
+$code-font-size: 0.75em; // please adjust the ace font size accordingly in editor.js
+
 :root {
-  --sidebar-width: 200px;
-  --page-padding: 15px;
-  --content-max-width: 770px;
-  --menu-bar-height: 50px;
-  --mono-font: "HackGen35 Console NF", "Source Code Pro", Consolas, "Ubuntu Mono", Menlo,
-    "DejaVu Sans Mono", monospace;
-  --code-font-size: 0.75em; // please adjust the ace font size accordingly in editor.js
+  --sidebar-width: $sidebar-width;
 }
